# Azure-Kinect-Python

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Azure-Kinect-Python/: CMakeLists.txt  PyKinect.py  setup.py
Azure-Kinect-Python/PyKinect/: Enums.py  __init__.py
Azure-Kinect-Python/include/PyKinect/: capture.h  device.h  device_config.h  image.h  util.h
Azure-Kinect-Python/src/: capture.c  device.c  device_config.c  image.c  main.c  module.c
Examples/: sample.py
